# MoodWhisperer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  code_review.md  sdkconfig.defaults
components/vfd_ntp_clock/: CMakeLists.txt
components/vfd_ntp_clock/include/: ESP32NTPClock.h  anim_matrix.h  anim_scrolling_text.h  anim_slot_machine.h  anim_static_text.h  anim_time.h  anim_utils.h  base_access_point_manager.h  base_ntp_clock_app.h  base_preferences.h  boot_manager.h  clock_fsm_manager.h  display_manager.h  enc_types.h  geo_tz_client.h  i_animation.h  i_base_clock.h  i_display_driver.h  logging.h  scene_manager.h  sntp_client.h  tz_data.h  wifi_connector.h
components/vfd_ntp_clock/src/: anim_matrix.cpp  anim_scrolling_text.cpp  anim_slot_machine.cpp  anim_static_text.cpp  base_access_point_manager.cpp  base_ntp_clock_app.cpp  base_preferences.cpp  boot_manager.cpp  clock_fsm_manager.cpp  display_manager.cpp  geo_tz_client.cpp  i_display_driver.cpp  logging.cpp  quote_manager.cpp  scene_manager.cpp  sntp_client.cpp  tz_data.cpp  wifi_connector.cpp
components/vfd_ntp_clock_drivers/: CMakeLists.txt
components/vfd_ntp_clock_drivers/include/: disp_driver_pt6315.h  sony_vfd_font.h  sony_vfd_pt6315.h
components/vfd_ntp_clock_drivers/src/: disp_driver_pt6315.cpp  sony_vfd_font.cpp  sony_vfd_pt6315.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp  mood_leds.cpp  mood_leds.h  quote_manager.cpp  quote_manager.h  version.h  vfd_hardware_map.h  vl53l0x_driver.cpp  vl53l0x_driver.h  whisperer_access_point_manager.cpp  whisperer_access_point_manager.h  whisperer_app.cpp  whisperer_app.h  whisperer_preferences.cpp  whisperer_preferences.h
partitions/: partitions.csv
tools/: serial_capture.py
